# from-first-principles

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING_DEV.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  e2e.yml  webui-deploy.yml
.scripts/: deploy-all.sh
docs/: DEPLOYMENT.md
scripts/: add-license.sh  deploy-all.sh  deploy-frontend-service.sh  deploy-webui-service_deprecated.sh
services/ai/: .agent_data.json  .env.example  .env.indexing.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-raspberry-pi.txt
services/ai/docs/: search_api.md
services/ai/scripts/: deploy-server.sh  dev-server.sh  load_test.sh
services/ai/src/agents/: __init__.py  agent.py  agent_factory.py  model_factory.py  system_instructions.py
services/ai/src/analytics/: README.md  __init__.py  config.py  dashboard.py  data_loader.py  main.py  requirements.txt  visualizers.py
services/ai/src/app/: __init__.py  main.py
services/ai/src/app/api/: __init__.py
services/ai/src/app/api/v1/: __init__.py  endpoints.py
services/ai/src/app/api/v1/routes/: __init__.py  agent.py  auth.py  files.py  search.py  utility.py
services/ai/src/app/artifacts/: __init__.py  file_processors.py  file_validator.py
services/ai/src/app/core/: __init__.py  config.py  logging.py  rate_limiter.py
services/ai/src/app/middleware/: session_middleware.py
services/ai/src/app/models/: __init__.py  config.py  login.py
services/ai/src/app/schemas/: __init__.py  request.py  response.py
services/ai/src/app/services/: __init__.py  agent_service.py  search_service.py  semantic_cache.py
services/ai/src/app/staticfrontend/: router.py
services/ai/src/app/utils/: dependencies.py  formatters.py  session_status.py  signed_url.py  sse.py
services/ai/src/indexing/: README.md  __init__.py  builder.py  config.py  document.py  embedder.py  loader.py  main.py
services/ai/src/indexing/cli/: __init__.py  core.py  data.py  search.py  utils.py
services/ai/src/indexing/utils/: __init__.py  text_processing.py
services/ai/tests/: conftest.py  test_api_basic.py  test_indexing.py  test_integration.py  test_ngrok_setup.sh  test_ollama_integration.py  test_search_api.py  test_semantic_cache.py
services/ai/tests/load/: __init__.py  config.py  locustfile.py
services/frontend/: .env.development  .env.development.example  .env.local.example  .gitignore  CHANGELOG.md  Makefile  README.md  netlify.toml  netlify.toml.example  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
services/frontend/public/public/content-test/blog/post1/: body.md  body_simple.md
services/frontend/public/public/content-test/blog/post2/: body.md  body_simple.md
services/frontend/public/public/content-test/blog/post3/: body.md  body_simple.md
services/frontend/public/public/content-test/engineering/post1/: body.md  body_simple.md
services/frontend/public/public/content-test/engineering/post2/: body.md  body_simple.md
services/frontend/scripts/: switch-api-config.sh
services/frontend/src/app/: layout.tsx  page.tsx
services/frontend/src/app/agent/: page.tsx
services/frontend/src/app/blog/: page.tsx
services/frontend/src/app/blog/[slug]/: BlogPostClient.tsx  page.tsx
services/frontend/src/app/engineering/: page.tsx
services/frontend/src/app/engineering/[slug]/: EngineeringPostClient.tsx  page.tsx
services/frontend/src/app/resume/: ResumeClient.tsx  page.tsx
services/frontend/src/app/search/: page.tsx
services/frontend/src/components/: ServiceUnavailable.test.tsx  ServiceUnavailable.tsx
services/frontend/src/components/Agent/: ChatInput.test.tsx  ChatInput.tsx  FileAttachment.tsx  MessageActions.tsx  chat-input.tsx
services/frontend/src/components/Content/: BlogPostArticle.tsx
services/frontend/src/components/Home/: hero-section.tsx
services/frontend/src/components/Layout/: NavBar.tsx  SettingsFloatingButton.tsx  footer.tsx  nav-bar.tsx
services/frontend/src/components/Search/: SearchBar.tsx  SearchFilters.tsx  SearchResultCard.tsx  SearchResults.tsx  SearchStatsDisplay.tsx  index.ts
services/frontend/src/hooks/: use-service-health.test.ts  use-service-health.ts  use-toast.test.ts
services/frontend/src/lib/: api.test.ts  api.ts  utils.test.ts
services/frontend/src/types/: index.ts
services/frontend/tests/e2e/: agent.spec.ts  homepage.spec.ts  search.spec.ts
services/webui_legacy/: .gitignore  README.md
services/webui_legacy/src/assets/js/: contact-us.js  custom.js  newsletter.js  render-article-text.js
services/webui_legacy/src/content/home/post1/: body.md  body_simple.md
services/webui_legacy/src/content/home/post2/: body.md  body_simple.md
services/webui_legacy/src/content/home/post3/: body.md  body_simple.md
services/webui_legacy/src/unreleased/: media_components.html
services/webui_react/scripts/: switch-api-config.sh
services/webui_react/src/app/: layout.tsx
services/webui_react/src/app/agent/: page.tsx
services/webui_react/src/components/Agent/: chat-input.tsx  floating-button.tsx  model-selector.tsx  references-panel.tsx
services/webui_react/src/components/Home/: hero-section.tsx
services/webui_react/src/lib/: api.ts
