[project]
name = "backend"
version = "0.3.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=0.2.0",
    "fastapi>=0.104.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.1",                # Required for FastAPI TestClient
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "ruff>=0.11.11",
    "google-cloud-discoveryengine",
    "gunicorn>=23.0.0",
    "pip>=25.2",
    # Indexing pipeline dependencies
    "lancedb>=0.3.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0.0",
    "markdown-it-py>=3.0.0",
    "langchain-text-splitters>=0.0.1",
    "psutil>=5.9.0",
    "torch>=2.0.0",
    "typer[all]>=0.9.0",               # Modern CLI framework
    "rich>=13.0.0",                    # Beautiful terminal output
    "litellm>=1.75.6",
]

[project.optional-dependencies]
analytics = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "altair>=5.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
index-cli = "src.indexing.main:app"
analytics = "src.analytics.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s --cov=src --cov-report=term-missing"
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__init__.py", "src/config.py", "tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
fail_under = 65

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
select = ["E", "F", "I"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "uv.lock"]
target-version = "py313"
fix = true

[tool.ruff.lint]


[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
skip-magic-trailing-comma = false
indent-style = "space"
